--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -302,6 +302,7 @@ MAIN_DISABLE_ALL_MAILS=Disable all email sending (for test purposes or demos)
 MAIN_MAIL_FORCE_SENDTO=Send all emails to (instead of real recipients, for test purposes)
 MAIN_MAIL_ENABLED_USER_DEST_SELECT=Suggest emails of employees (if defined) into the list of predefined recipient when writing a new email
 MAIN_MAIL_NO_WITH_TO_SELECTED=Do not select a default recipient even if single choice
+MAIN_EMAIL_SUPPORT_ACK=Add acknowledgment checkbox for email
 MAIN_MAIL_SENDMODE=Email sending method
 MAIN_MAIL_SMTPS_ID=SMTP ID (if sending server requires authentication)
 MAIN_MAIL_SMTPS_PW=SMTP Password (if sending server requires authentication)
