--- a/htdocs/langs/en_US/hrm.lang
+++ b/htdocs/langs/en_US/hrm.lang
@@ -72,7 +72,7 @@ RequiredSkills=Required skills for this job
 UserRank=User Rank
 SkillList=Skill list
 SaveRank=Save rank
-TypeKnowHow=Know how
+TypeKnowHow=Know-how
 TypeHowToBe=How to be
 TypeKnowledge=Knowledge
 AbandonmentComment=Abandonment comment
