--- a/htdocs/langs/fr_FR/modulebuilder.lang
+++ b/htdocs/langs/fr_FR/modulebuilder.lang
@@ -178,12 +178,6 @@ ApiObjectDeleted=L'API pour l'objet %s a été supprimée avec succès
 CRUDRead=Lire
 CRUDCreateWrite=Créer ou mettre à jour
 FailedToAddCodeIntoDescriptor=Échec de l'ajout de code dans le descripteur. Vérifiez que le commentaire de chaîne "%s" est toujours présent dans le fichier.
-<<<<<<< HEAD
-DictionariesCreated = Le dictionnaire <b>%s</b> a été créé avec succès
-DictionaryDeleted=Le dictionnaire <b>%s</b> a été supprimé avec succès
-PropertyModuleUpdated=Propriété <b>%s</b> a été modifiée avec succès
-=======
 DictionariesCreated=Dictionnaire <b> %s </b> créé avec succès
 DictionaryDeleted=Dictionnaire <b> %s </b> supprimé avec succès
-PropertyModuleUpdated=Property <b>%s</b> has been update successfully
->>>>>>> branch '18.0' of git@github.com:Dolibarr/dolibarr.git
+PropertyModuleUpdated=Propriété <b>%s</b> modifiée avec succès
