--- a/htdocs/langs/en_US/supplier_proposal.lang
+++ b/htdocs/langs/en_US/supplier_proposal.lang
@@ -42,8 +42,8 @@ SendAskRef=Sending the price request %s
 SupplierProposalCard=Request card
 ConfirmDeleteAsk=Are you sure you want to delete this price request <b>%s</b>?
 ActionsOnSupplierProposal=Events on price request
-DocModelAuroreDescription=A complete template for a vendor quotation request template (old implementation of Sponge template)
-DocModelZenithDescription=A complete template for a vendor quotation request template
+DocModelAuroreDescription=A complete template for a vendor quotation request (old implementation of Sponge template)
+DocModelZenithDescription=A complete template for a vendor quotation request
 CommercialAsk=Price request
 DefaultModelSupplierProposalCreate=Default model creation
 DefaultModelSupplierProposalToBill=Default template when closing a price request (accepted)
