--- a/htdocs/langs/fr_FR/admin.lang
+++ b/htdocs/langs/fr_FR/admin.lang
@@ -394,7 +394,7 @@ ListOfDirectoriesForModelGenODT=Liste des répertoires contenant des documents m
 NumberOfModelFilesFound=Nombre de fichiers modèles ODT/ODS trouvés dans ce(s) répertoire(s)
 ExampleOfDirectoriesForModelGen=Exemples de syntaxe : <br>c:\\myapp\\mydocumentdir\\mysubdir<br>/home/myapp/mydocumentdir/mysubdir<br>DOL_DATA_ROOT/ecm/ecmdir
 FollowingSubstitutionKeysCanBeUsed=<br>Pour savoir comment rédiger des modèles de document odt avant de les placer dans un de ces répertoires, consulter la documentation du wiki :
-FullListOnOnlineDocumentation=https://wiki.dolibarr.org/index.php/Cr%C3%A9er_un_mod%C3%A8le_de_document_ODT
+FullListOnOnlineDocumentation=https://wiki.dolibarr.org/index.php/Créer_un_modèle_de_document_ODT
 FirstnameNamePosition=Ordre d'affichage prénom/nom
 DescWeather=Les graphiques suivant seront affichés sur le tableau de bord si le nombre d'éléments en retard atteint ces valeurs :
 KeyForWebServicesAccess=Clé pour utiliser les Web Services (paramètre "dolibarrkey" dans les webservices)
