--- a/htdocs/langs/en_US/products.lang
+++ b/htdocs/langs/en_US/products.lang
@@ -387,6 +387,7 @@ ErrorDeletingGeneratedProducts=There was an error while trying to delete existin
 NbOfDifferentValues=No. of different values
 NbProducts=Number of products
 ParentProduct=Parent product
+ParentProductOfVariant=Parent product of variant
 HideChildProducts=Hide variant products
 ShowChildProducts=Show variant products
 NoEditVariants=Go to Parent product card and edit variants price impact in the variants tab
