Debug and protection of form for contact/prospect creation

--- a/htdocs/langs/en_US/companies.lang
+++ b/htdocs/langs/en_US/companies.lang
@@ -1,7 +1,6 @@
 # Dolibarr language file - Source file is en_US - companies
-newSocieteAdded = Your prospect is recorded
-ContactUsDesc = This form allows you to record your subscription as a new prospect of the foundation.
-NewProspect = new prospect
+newSocieteAdded=Your contact has been recorded. We will go back to you soon...
+ContactUsDesc=This form allows you to send us a message for a first contact.
 ErrorCompanyNameAlreadyExists=Company name %s already exists. Choose another one.
 ErrorSetACountryFirst=Set the country first
 SelectThirdParty=Select a third party
