NEW Option to show label, ref+label or only ref of product in TakePOS

--- a/htdocs/langs/en_US/cashdesk.lang
+++ b/htdocs/langs/en_US/cashdesk.lang
@@ -141,7 +141,7 @@ HideCategories=Hide categories
 HideStockOnLine=Hide stock on line
 ShowOnlyProductInStock=Show the products in stock
 ShowCategoryDescription=Show category description
-ShowProductReference=Show reference of products
+ShowProductReference=Show reference or label of products
 UsePriceHT=Use price excl. taxes and not price incl. taxes
 TerminalName=Terminal %s
 TerminalNameDesc=Terminal name
