add choice on deletion while dispatched lines exists

--- a/htdocs/langs/en_US/orders.lang
+++ b/htdocs/langs/en_US/orders.lang
@@ -206,5 +206,7 @@ StatusSupplierOrderReceivedPartially=Partially received
 StatusSupplierOrderReceivedAll=All products received
 NeedAtLeastOneInvoice = There has to be at least one Invoice
 LineAlreadyDispatched = The order line is already received.
-ExistingDipatchLinesWillBeRemoved = There are dispatched lines. They will be deleted.
+ExistingDipatchLines = There are dispatched lines for this order. 
+WarningDispatchedLinesWillNotBeAccessibles = You will be unable to update/remove these dispatched lines if you decide to not delete them.
+ConfirmDeleteDispatchedLines = Delete dispatched lines ? 
 SupplierOrderDeletion = Supplier order %s Deletion
