New : Bookcal dev 2

--- a/htdocs/langs/en_US/agenda.lang
+++ b/htdocs/langs/en_US/agenda.lang
@@ -181,3 +181,4 @@ Reminders=Reminders
 ActiveByDefault=Enabled by default
 Until=until
 DataFromWasMerged=Data from %s was merged
+AgendaShowBookcalCalendar=Booking calendar: %s
