--- a/htdocs/langs/en_US/ecm.lang
+++ b/htdocs/langs/en_US/ecm.lang
@@ -45,7 +45,7 @@ ExtraFieldsEcmFiles=Extrafields Ecm Files
 ExtraFieldsEcmDirectories=Extrafields Ecm Directories
 ECMSetup=ECM Setup
 GenerateImgWebp=Duplicate all images with another version with .webp format
-ConfirmGenerateImgWebp=If you confirm, you will generate an image in .webp format for all images currently into this folder (subfolders are not included)...
+ConfirmGenerateImgWebp=If you confirm, you will generate an image in .webp format for all images currently into this folder (subfolders are not included, webp images will not be generated if size is greater than original)...
 ConfirmImgWebpCreation=Confirm all images duplication
 GenerateChosenImgWebp=Duplicate chosen image with another version with .webp format
 ConfirmGenerateChosenImgWebp=If you confirm, you will generate an image in .webp format for the image %s
