NEW updating by adding tooltip for api section in Modulebuilder

--- a/htdocs/langs/fr_FR/modulebuilder.lang
+++ b/htdocs/langs/fr_FR/modulebuilder.lang
@@ -40,7 +40,7 @@ EditorName=Nom de l'éditeur
 EditorUrl=URL de l'éditeur
 DescriptorFile=Fichier descriptif du module
 ClassFile=Fichier pour la classe PHP DAO CRUD
-ApiClassFile=Fichier de la classe PHP de l'API
+ApiClassFile=Fichier API du module
 PageForList=Page PHP pour la liste des enregistrements
 PageForCreateEditView=Page PHP pour créer/modifier/afficher un enregistrement
 PageForAgendaTab=Page PHP pour l'onglet événement
@@ -181,3 +181,4 @@ FailedToAddCodeIntoDescriptor=Échec de l'ajout de code dans le descripteur. Vé
 DictionariesCreated=Dictionnaire <b> %s </b> créé avec succès
 DictionaryDeleted=Dictionnaire <b> %s </b> supprimé avec succès
 PropertyModuleUpdated=Propriété <b>%s</b> modifiée avec succès
+InfoForApiFile=* Lorsque vous générez le fichier pour la première fois, toutes les méthodes seront créées <strong>pour chaque objets.</strong><br>* Lorsque vous cliquez sur <strong>supprimer</strong>, vous supprimez toutes les méthodes pour <strong>l'objet sélectionné</strong>. 
