--- a/htdocs/langs/en_US/modulebuilder.lang
+++ b/htdocs/langs/en_US/modulebuilder.lang
@@ -40,7 +40,7 @@ EditorName=Name of editor
 EditorUrl=URL of editor
 DescriptorFile=Descriptor file of module
 ClassFile=File for PHP DAO CRUD class
-ApiClassFile=File for PHP API class
+ApiClassFile=API file of module
 PageForList=PHP page for list of record
 PageForCreateEditView=PHP page to create/edit/view a record
 PageForAgendaTab=PHP page for event tab
@@ -181,3 +181,4 @@ FailedToAddCodeIntoDescriptor=Failed to add code into descriptor. Check that the
 DictionariesCreated=Dictionary <b>%s</b> created successfully
 DictionaryDeleted=Dictionary <b>%s</b> removed successfully
 PropertyModuleUpdated=Property <b>%s</b> has been update successfully
+InfoForApiFile=* When you generate file for the first time then all methods will be created <strong>for each object.</strong><br>* When you click in <strong>remove</strong> you just remove all methods for the <strong>selected object</strong>. 
