--- a/htdocs/langs/en_US/commercial.lang
+++ b/htdocs/langs/en_US/commercial.lang
@@ -89,6 +89,6 @@ ThisIsInformationOnDocumentToSignSociete_rib=This is information on SEPA Mandate
 SignatureProposalRef=Signature of quote/commercial proposal %s
 SignatureContractRef=Signature of contract %s
 SignatureFichinterRef=Signature of intervention %s
-SignatureSociete_ribRef=Signature of SEPA mandat %s
+SignatureSociete_ribRef=Signature of SEPA Mandate %s
 SignSociete_rib=Signature of SEPA Mandate %s
 FeatureOnlineSignDisabled=Feature for online signing disabled or document generated before the feature was enabled
