Fix missing translation

--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -630,6 +630,10 @@ Module600Desc=Send email notifications triggered by a business event: per user (
 Module600Long=Note that this module sends emails in real-time when a specific business event occurs. If you are looking for a feature to send email reminders for agenda events, go into the setup of module Agenda.
 Module610Name=Product Variants
 Module610Desc=Creation of product variants (color, size etc.)
+Module650Name=Bills Of Material (BOM)
+Module650Desc=Module to define your Bills Of Materials (BOM). Can be used for Manufacturing Resource Planning by the module Manufacturing Orders (MO)
+Module660Name=Manufacturing Resource Planning (MRP)
+Module660Desc=Module to Manage Manufacturing Orders (MO)
 Module700Name=Donations
 Module700Desc=Donation management
 Module770Name=Expense Reports
