--- a/htdocs/langs/en_US/companies.lang
+++ b/htdocs/langs/en_US/companies.lang
@@ -510,3 +510,4 @@ ShowSocialNetworks=Show social networks
 HideSocialNetworks=Hide social networks
 ExternalSystemID=External system ID
 IDOfPaymentInAnExternalSystem=ID of the payment mode into an external system (like Stripe, Paypal, ...)
+AADEWebserviceCredentials=AADE Webservice Credentials
