--- a/htdocs/langs/en_US/companies.lang
+++ b/htdocs/langs/en_US/companies.lang
@@ -48,7 +48,7 @@ ParentCompany=Parent company
 Subsidiaries=Subsidiaries
 ReportByMonth=Report per month
 ReportByCustomers=Report per customer
-ReportByThirdparties=Report per thirdparty
+ReportByThirdparties=Report per third party
 ReportByQuarter=Report per rate
 CivilityCode=Civility code
 RegisteredOffice=Registered office
@@ -502,7 +502,7 @@ InEEC=Europe (EEC)
 RestOfEurope=Rest of Europe (EEC)
 OutOfEurope=Out of Europe (EEC)
 CurrentOutstandingBillLate=Current outstanding bill late
-BecarefullChangeThirdpartyBeforeAddProductToInvoice=Be carefull, depending on your product price settings, you should change thirdparty before adding product to POS.
+BecarefullChangeThirdpartyBeforeAddProductToInvoice=Be carefull, depending on your product price settings, you should change the third party before adding product to POS.
 EmailAlreadyExistsPleaseRewriteYourCompanyName=email already exists please rewrite your company name
 TwoRecordsOfCompanyName=more than one record exists for this company, please contact us to complete your partnership request
 CompanySection=Company section
