--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -2150,7 +2150,7 @@ EmailCollectorExampleToCollectAnswersFromExternalEmailSoftwareDesc=Scan your mai
 EmailCollectorExampleToCollectAnswersFromExternalEmailSoftware=Example collecting e-mail answers sent from an external e-mail software
 EmailCollectorExampleToCollectDolibarrAnswersDesc=Collect all emails that are an answer of an email sent from your application. An event (Module Agenda must be enabled) with the email response will be recorded at the good place. For example, if you send a commercial proposal, order, invoice or message for a ticket by email from the application, and the recipient answers your email, the system will automatically catch the answer and add it into your ERP.
 EmailCollectorExampleToCollectDolibarrAnswers=Example collecting all ingoing messages being answers to messages sent from Dolibarr'
-EmailCollectorExampleToCollectLeadsDesc=Collect emails that match some rules and create automatically a lead (Module Project must be enabled) with the email informations. You can use this collector if you want to follow your lead using the module Project (1 lead = 1 project), so your leads will be automatically generated. If the collector Collect_Responses is also enabled, when you send an email from your leads, proposals or any other object, you may also see answers of your customers or partners directly on the application.<br>Note: With this initial example, the title of the lead is generated including the email. If the thirdparty can't be found in database (new customer), the lead will be attached to the thirdparty with ID 1.
+EmailCollectorExampleToCollectLeadsDesc=Collect emails that match some rules and create automatically a lead (Module Project must be enabled) with the email informations. You can use this collector if you want to follow your lead using the module Project (1 lead = 1 project), so your leads will be automatically generated. If the collector Collect_Responses is also enabled, when you send an email from your leads, proposals or any other object, you may also see answers of your customers or partners directly on the application.<br>Note: With this initial example, the title of the lead is generated including the email. If the third party can't be found in database (new customer), the lead will be attached to the third party with ID 1.
 EmailCollectorExampleToCollectLeads=Example collecting leads
 EmailCollectorExampleToCollectJobCandidaturesDesc=Collect emails applying to job offers (Module Recruitment must be enabled). You can complete this collector if you want to automatically create a candidature for a job request. Note: With this initial example, the title of the candidature is generated including the email.
 EmailCollectorExampleToCollectJobCandidatures=Example collecting job candidatures received by e-mail
@@ -2192,7 +2192,7 @@ Protanopia=Protanopia
 Deuteranopes=Deuteranopes
 Tritanopes=Tritanopes
 ThisValueCanOverwrittenOnUserLevel=This value can be overwritten by each user from its user page - tab '%s'
-DefaultCustomerType=Default thirdparty type for "New customer" creation form
+DefaultCustomerType=Default third-party type for "New customer" creation form
 ABankAccountMustBeDefinedOnPaymentModeSetup=Note: The bank account must be defined on the module of each payment mode (Paypal, Stripe, ...) to have this feature working.
 RootCategoryForProductsToSell=Root category of products to sell
 RootCategoryForProductsToSellDesc=If defined, only products inside this category or childs of this category will be available in the Point Of Sale
@@ -2217,9 +2217,9 @@ InstanceUniqueID=Unique ID of the instance
 SmallerThan=Smaller than
 LargerThan=Larger than
 IfTrackingIDFoundEventWillBeLinked=Note that If a tracking ID of an object is found into email, or if the email is an answer of an email aready collected and linked to an object, the created event will be automatically linked to the known related object.
-WithGMailYouCanCreateADedicatedPassword=With a GMail account, if you enabled the 2 steps validation, it is recommanded to create a dedicated second password for the application instead of using your own account passsword from https://myaccount.google.com/.
+WithGMailYouCanCreateADedicatedPassword=With a GMail account, if you enabled the 2 steps validation, it is recommended to create a dedicated second password for the application instead of using your own account password from https://myaccount.google.com/.
 EmailCollectorTargetDir=It may be a desired behaviour to move the email into another tag/directory when it was processed successfully. Just set name of directory here to use this feature (Do NOT use special characters in name). Note that you must also use a read/write login account.
-EmailCollectorLoadThirdPartyHelp=You can use this action to use the email content to find and load an existing thirdparty in your database (search will be done on the defined property among 'id','name','name_alias','email'). The found (or created) thirdparty will be used for following actions that need it.<br>For example, if you want to create a thirdparty with a name extracted from a string 'Name: name to find' present into the body, use the sender email as email, you can set the parameter field like this:<br>'email=HEADER:^From:(.*);name=EXTRACT:BODY:Name:\\s([^\\s]*);client=SET:2;'<br>
+EmailCollectorLoadThirdPartyHelp=You can use this action to use the email content to find and load an existing third party in your database (search will be done on the defined property among 'id','name','name_alias','email'). The found (or created) third party will be used for following actions that need it.<br>For example, if you want to create a third party with a name extracted from a string 'Name: name to find' present into the body, use the sender email as email, you can set the parameter field like this:<br>'email=HEADER:^From:(.*);name=EXTRACT:BODY:Name:\\s([^\\s]*);client=SET:2;'<br>
 FilterSearchImapHelp=Warning: a lot of email servers (like Gmail) are doing full word searches when searching on a string and will not return a result if the string is only found partially into a word. For this reason too, use special characters into a search criteria will be ignored are they are not part of existing words.<br>To make an exclude search on a word (return email if word is not found), you can use the ! character before the word (may not work on some mail servers).
 EndPointFor=End point for %s : %s
 DeleteEmailCollector=Delete email collector
@@ -2236,9 +2236,9 @@ EmailTemplate=Template for email
 EMailsWillHaveMessageID=Emails will have a tag 'References' matching this syntax
 PDF_SHOW_PROJECT=Show project on document
 ShowProjectLabel=Project Label
-PDF_INCLUDE_ALIAS_IN_THIRDPARTY_NAME=Include alias in thirdparty name
-THIRDPARTY_ALIAS=Name thirdparty - Alias thirdparty
-ALIAS_THIRDPARTY=Alias thirdparty - Name thirdparty
+PDF_INCLUDE_ALIAS_IN_THIRDPARTY_NAME=Include alias in third-party name
+THIRDPARTY_ALIAS=Third-party name - Third-party alias
+ALIAS_THIRDPARTY=Third-party alias - Third-party name
 PDFIn2Languages=Show labels in the PDF in 2 different languages (this feature may not work for some couple of languages)
 PDF_USE_ALSO_LANGUAGE_CODE=If you want to have some texts in your PDF duplicated in 2 different languages in the same generated PDF, you must set here this second language so generated PDF will contains 2 different languages in same page, the one chosen when generating PDF and this one (only few PDF templates support this). Keep empty for 1 language per PDF.
 PDF_USE_A=Gererate PDF documents with format PDF/A instead of defaut format PDF
@@ -2360,7 +2360,7 @@ DoesNotWorkWithAllThemes=Will not work with all themes
 NoName=No name
 ShowAdvancedOptions= Show advanced options
 HideAdvancedoptions= Hide advanced options
-CIDLookupURL=The module brings an URL that can be used by an external tool to get the name of a thirdparty or contact from its phone number. URL to use is:
+CIDLookupURL=The module brings an URL that can be used by an external tool to get the name of a third party or contact from its phone number. URL to use is:
 OauthNotAvailableForAllAndHadToBeCreatedBefore=OAUTH2 authentication is not available for all hosts, and a token with the right permissions must have been created upstream with the OAUTH module
 MAIN_MAIL_SMTPS_OAUTH_SERVICE=OAUTH2 authentication service
 DontForgetCreateTokenOauthMod=A token with the right permissions must have been created upstream with the OAUTH module
@@ -2370,7 +2370,7 @@ UseOauth=Use a OAUTH token
 Images=Images
 MaxNumberOfImagesInGetPost=Max number of images allowed in a HTML field submitted in a form
 MaxNumberOfPostOnPublicPagesByIP=Max number of posts on public pages with the same IP address in a month
-CIDLookupURL=The module brings an URL that can be used by an external tool to get the name of a thirdparty or contact from its phone number. URL to use is:
+CIDLookupURL=The module brings an URL that can be used by an external tool to get the name of a third party or contact from its phone number. URL to use is:
 ScriptIsEmpty=The script is empty
 ShowHideTheNRequests=Show/hide the %s SQL request(s)
 DefinedAPathForAntivirusCommandIntoSetup=Define a path for an antivirus program into <b>%s</b>
