--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -1123,7 +1123,7 @@ ContactDefault_project_task=Task
 ContactDefault_propal=Proposal
 ContactDefault_supplier_proposal=Supplier Proposal
 ContactDefault_ticket=Ticket
-ContactAddedAutomatically=Contact added from contact thirdparty roles
+ContactAddedAutomatically=Contact added from contact third-party roles
 More=More
 ShowDetails=Show details
 CustomReports=Custom reports
@@ -1222,7 +1222,7 @@ UserAgent=User Agent
 InternalUser=Internal user
 ExternalUser=External user
 NoSpecificContactAddress=No specific contact or address
-NoSpecificContactAddressBis=This tab is dedicated to force specific contacts or addresses for the current object. Use it only if you want to define one or several specific contacts or addresses for the object when the information on the thirdparty is not enough or not accurate.
+NoSpecificContactAddressBis=This tab is dedicated to force specific contacts or addresses for the current object. Use it only if you want to define one or several specific contacts or addresses for the object when the information on the third party is not enough or not accurate.
 HideOnVCard=Hide %s
 AddToContacts=Add address to my contacts
 LastAccess=Last access
