Better help on administrator flag

--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -103,7 +103,7 @@ RecordGenerated=Record generated
 LevelOfFeature=Level of features
 NotDefined=Not defined
 DolibarrInHttpAuthenticationSoPasswordUseless=Dolibarr authentication mode is set to <b>%s</b> in configuration file <b>conf.php</b>.<br>This means that the password database is external to Dolibarr, so changing this field may have no effect.
-Administrator=Administrator
+Administrator=System administrator
 Undefined=Undefined
 PasswordForgotten=Password forgotten?
 NoAccount=No account?
