--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -104,6 +104,7 @@ LevelOfFeature=Level of features
 NotDefined=Not defined
 DolibarrInHttpAuthenticationSoPasswordUseless=Dolibarr authentication mode is set to <b>%s</b> in configuration file <b>conf.php</b>.<br>This means that the password database is external to Dolibarr, so changing this field may have no effect.
 Administrator=System administrator
+AdministratorDesc=System administrator (can administer user, permissions but also system setup and modules configuration)
 Undefined=Undefined
 PasswordForgotten=Password forgotten?
 NoAccount=No account?
