making our language selectable

--- a/htdocs/langs/en_DK/languages.lang
+++ b/htdocs/langs/en_DK/languages.lang
@@ -30,6 +30,7 @@ Language_el_CY=Greek (Cyprus)
 Language_en_AE=English (United Arab Emirates)
 Language_en_AU=English (Australia)
 Language_en_CA=English (Canada)
+Language_en_DK=English (Denmark)
 Language_en_GB=English (United Kingdom)
 Language_en_IN=English (India)
 Language_en_MY=English (Myanmar)
